fix vertical align and edited message indicator

--- a/src/layout.css
+++ b/src/layout.css
@@ -4,12 +4,12 @@
 
 html {
 	word-break: break-word; /* required for text wrapping to work */
-	vertical-align: top !important; /* if this isn't `top`, inline elements will overflow their containers */
 	-webkit-text-size-adjust: none; /* this fixes an ios safari bug where some text is "stuck" at larger sizes after rotating the screen */
 }
 
 :not(.markup-root *) {
-	vertical-align: inherit; /* (not normally inherited) */
+	vertical-align: top; /* if this isn't `top`, the .bar system's inline elements will oveflow */
+	/* the real solution here is to use flex instead. but ehh */
 }
 
 * {
